2015-11-28  Jim Fowler  <jrf@Biblion>

	* Tools/collection/designer: created ui_author.ui, ui_projects.ui,
	and ui_reports.ui

	* Tools/collection/mainWindow.py (Collection.selectVendor): added
	code to get lists of Authors, Vendors, Projects, and ToDo Tasks
	into a generic selection window. Modified books, mainWindow.py,
	sql.py and database.py

	* Tools/scripts/CreateViews.sql: modifed viewAllToDoTasks
	to return Summary and ToDoId rather than all fields.

2015-11-27  Jim Fowler  <jrf@Biblion>

	* Tools/collection/sql.py (DataBase.openDB): Added
	DataBase class.

	* Tools/setup.py: make collection into a python package

	* Tools/designer/ui_mainWindow.ui: added second column
	of buttons

	* Tools/doc/conf.py: ran sphinx-quickstart to generate
	base for documentation

	* Tools/menus.py: added View menu to duplicate window buttons

	* Collection.db3: Added Summary column to ToDo table.  Modified
	Data/ToDo.txt to have a summary entry since I defined it as NOT
	NULL.  Only five entries to modify so it was easy.

2015-11-26  Jim Fowler  <jrf@Biblion>

	* Tools/mainWindow.py: created main window code.

	* Tools/collection: created main program

	* Tools/menus.py: created the menus file from bookentry/menus.py

	* Sql3/Data/: Created new output files from Access.  Modifed
	Books.txt to correct for duplicate AccessionNumbers. There were
	three duplicate numbers.

	* Sql3/Data/fixit.py: fix problems in Books.txt and split out
	Wanted

	* Sql3/CreateTables.sql: Removed wanted column. Changed ToDo.ID
	into ToDo.ToDoId.

	* Sql3/CreateViews.sql: Added more standard views

2015-11-25  Jim Fowler  <jrf@Biblion>

	* Sql3/CreateTables.sql: added foreign keys PRAGMA and cleaned up
	sql statements based on O'Reilly SQLite boot.

2015-11-24  Jim Fowler  <jrf@Biblion>

	* Sql3/CreateViews.sql: Added views to the database

2015-11-21  Jim Fowler  <jrf@Biblion>

	* Sql3/CreateTables.sql: Started work on redefining
	the database using sqlite3 rather than mySQL. Sqlite