@@ -1,4 +1,3 @@
 collection
 stylesheet
-ui_mainWindow.py
-ui_select.py
+ui_*.py
